# panda_gazebo_moveit2

./: 0001-Fix-gz_ros2_control-bug.patch  LICENSE  README.md
panda_gazebo_demo/: CMakeLists.txt  package.xml
panda_gazebo_demo/launch/: move_group_gazebo.launch.py
panda_gazebo_demo/models/: .panda_world.sdf.swp  panda_world.sdf
panda_gazebo_demo/models/Frozen_Olafs_In_Trouble_PopOMatic_Game/: metadata.pbtxt  model.config  model.sdf
panda_gazebo_demo/scripts/: config.yaml  gazebo_updater.py
panda_gazebo_description/: CMakeLists.txt  package.xml
panda_gazebo_description/urdf/: .panda_gazebo.urdf.swp  panda_gazebo.urdf
panda_gazebo_motion_planning_api/: CMakeLists.txt  package.xml
panda_gazebo_motion_planning_api/launch/: .motion_planning_api_gazebo.launch.py.swp  motion_planning_api_gazebo.launch.py
panda_gazebo_motion_planning_api/src/: motion_planning_api_tutorial.cpp
panda_gazebo_motion_planning_python_api/: CMakeLists.txt  package.xml
panda_gazebo_motion_planning_python_api/launch/: motion_planning_python_api_tutorial.launch.py
panda_gazebo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
panda_gazebo_moveit_config/config/: gazebo_ros2_control_plugin.xacro  gripper_moveit_controllers2.yaml  panda.urdf.xacro  panda_arm.srdf.xacro  panda_arm_hand.srdf.xacro  panda_gazebo.ros2_control.xacro  panda_gazebo.urdf.xacro  panda_gazebo_controllers.yaml  ros_gz_sim_plugin.xacro
panda_gazebo_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py
